ajout media querries pour card-menu des  pages restantes

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -46,105 +46,107 @@
                   <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
                 </div>
               </div>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">ENTREES</p>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Tartare de poulpe acidulé</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Aux zestes d'orange</p>
-                      <span class="card-menu__price">25€</span>
+              <div class="card-menu__dishes-wrapper">
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">ENTREES</p>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Tartare de poulpe acidulé</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Aux zestes d'orange</p>
+                        <span class="card-menu__price">25€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Velouté de légumes d'antan</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Carotte, panais, topinambour</p>
-                      <span class="card-menu__price">35€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Velouté de légumes d'antan</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Carotte, panais, topinambour</p>
+                        <span class="card-menu__price">35€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class= "card-menu__recipe-heading">Soupe à l'oignon</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Revisitée</p>
-                      <span class="card-menu__price">20€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class= "card-menu__recipe-heading">Soupe à l'oignon</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Revisitée</p>
+                        <span class="card-menu__price">20€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">PLATS</p>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Coquilles Saint-Jacques</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Accompagnées d'une purée de panais</p>
-                      <span class="card-menu__price">40€</span>
+                </article>
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">PLATS</p>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Coquilles Saint-Jacques</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Accompagnées d'une purée de panais</p>
+                        <span class="card-menu__price">40€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Magret de canard</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Et parmentier de pommes de terre</p>
-                      <span class="card-menu__price">35€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Magret de canard</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Et parmentier de pommes de terre</p>
+                        <span class="card-menu__price">35€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Pigeonneau d’Ille-et-Vilaine</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Sur son lit de gnocchis aux légumes</p>
-                      <span class="card-menu__price">44€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Pigeonneau d’Ille-et-Vilaine</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Sur son lit de gnocchis aux légumes</p>
+                        <span class="card-menu__price">44€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">DESSERTS</p>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Pétales de violettes glacés</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Et purée de noisettes</p>
-                      <span class="card-menu__price">18€</span>
+                </article>
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">DESSERTS</p>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Pétales de violettes glacés</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Et purée de noisettes</p>
+                        <span class="card-menu__price">18€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Fondant au chocolat</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Revisité</p>
-                      <span class="card-menu__price">22€</span>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Fondant au chocolat</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Revisité</p>
+                        <span class="card-menu__price">22€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Millefeuille croustillant</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Myrtilles et pâte d’amande</p>
-                      <span class="card-menu__price">23€</span>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Millefeuille croustillant</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Myrtilles et pâte d’amande</p>
+                        <span class="card-menu__price">23€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
+                </article>
+              </div>
               <button class="add-cart">Commander</button>
             </div>
           
