--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -46,115 +46,117 @@
                   <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
                 </div>
               </div>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">ENTREES</p>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Ravioles de foie gras</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Accompagnés de leur crème à la truffe</p>
-                      <span class="card-menu__price">25€</span>
+              <div class="card-menu__dishes-wrapper">
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">ENTREES</p>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Ravioles de foie gras</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Accompagnés de leur crème à la truffe</p>
+                        <span class="card-menu__price">25€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Caviar osciètre</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Sur blini à la farine de blé noir</p>
-                      <span class="card-menu__price">35€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Caviar osciètre</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Sur blini à la farine de blé noir</p>
+                        <span class="card-menu__price">35€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class= "card-menu__recipe-heading">Homard et espuma de potiron</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Mariné aux zestes d'orange</p>
-                      <span class="card-menu__price">20€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class= "card-menu__recipe-heading">Homard et espuma de potiron</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Mariné aux zestes d'orange</p>
+                        <span class="card-menu__price">20€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class= "card-menu__recipe-heading">Foie gras de canard cuit entier</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">MConfiture de figue et pain toasté</p>
-                      <span class="card-menu__price">35€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class= "card-menu__recipe-heading">Foie gras de canard cuit entier</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">MConfiture de figue et pain toasté</p>
+                        <span class="card-menu__price">35€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">PLATS</p>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Noix de coquilles Saint-Jacques</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Sur lit de purée de céleri-rave</p>
-                      <span class="card-menu__price">40€</span>
+                </article>
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">PLATS</p>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Noix de coquilles Saint-Jacques</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Sur lit de purée de céleri-rave</p>
+                        <span class="card-menu__price">40€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Langoustine poêlée</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Purée de patate douce</p>
-                      <span class="card-menu__price">35€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Langoustine poêlée</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Purée de patate douce</p>
+                        <span class="card-menu__price">35€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Mijoté de queue de boeuf</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Et riz sauvage aux zestes de citron</p>
-                      <span class="card-menu__price">44€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Mijoté de queue de boeuf</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Et riz sauvage aux zestes de citron</p>
+                        <span class="card-menu__price">44€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">DESSERTS</p>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Macaron noisette et chocolat</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Glace au caramel brun et sel de Guérande</p>
-                      <span class="card-menu__price">18€</span>
+                </article>
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">DESSERTS</p>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Macaron noisette et chocolat</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Glace au caramel brun et sel de Guérande</p>
+                        <span class="card-menu__price">18€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Baba au rhum revisité</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Avec son coulis de citron</p>
-                      <span class="card-menu__price">22€</span>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Baba au rhum revisité</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Avec son coulis de citron</p>
+                        <span class="card-menu__price">22€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Tarte au citron meringuée</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Déstructurée</p>
-                      <span class="card-menu__price">23€</span>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Tarte au citron meringuée</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Déstructurée</p>
+                        <span class="card-menu__price">23€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
+                </article>
+              </div>
               <button class="add-cart">Commander</button>
             </div>
           
