--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -46,105 +46,107 @@
                   <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
                 </div>
               </div>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">ENTREES</p>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Tartare de thon</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Assaisonné au yuzu</p>
-                      <span class="card-menu__price">25€</span>
+              <div class="card-menu__dishes-wrapper">
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">ENTREES</p>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Tartare de thon</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Assaisonné au yuzu</p>
+                        <span class="card-menu__price">25€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Bouchée de homard croustillant</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Et sa farandole de petits légumes</p>
-                      <span class="card-menu__price">35€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Bouchée de homard croustillant</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Et sa farandole de petits légumes</p>
+                        <span class="card-menu__price">35€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class= "card-menu__recipe-heading">Velouté de cèpes</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Aux truffes</p>
-                      <span class="card-menu__price">20€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class= "card-menu__recipe-heading">Velouté de cèpes</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Aux truffes</p>
+                        <span class="card-menu__price">20€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">PLATS</p>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Poulet rôti aux herbes de Provence</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Et sa crème de truffe</p>
-                      <span class="card-menu__price">40€</span>
+                </article>
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">PLATS</p>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Poulet rôti aux herbes de Provence</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Et sa crème de truffe</p>
+                        <span class="card-menu__price">40€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Langouste rôtie</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Et ses légumes de saison</p>
-                      <span class="card-menu__price">35€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Langouste rôtie</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Et ses légumes de saison</p>
+                        <span class="card-menu__price">35€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Côte de boeuf Angus</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Et sa purée de panais</p>
-                      <span class="card-menu__price">44€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Côte de boeuf Angus</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Et sa purée de panais</p>
+                        <span class="card-menu__price">44€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">DESSERTS</p>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Farandole de desserts</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Du chef</p>
-                      <span class="card-menu__price">18€</span>
+                </article>
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">DESSERTS</p>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Farandole de desserts</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Du chef</p>
+                        <span class="card-menu__price">18€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Crème brulée </h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Revisitée</p>
-                      <span class="card-menu__price">22€</span>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Crème brulée </h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Revisitée</p>
+                        <span class="card-menu__price">22€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Tiramisu</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">À la noisette</p>
-                      <span class="card-menu__price">23€</span>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Tiramisu</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">À la noisette</p>
+                        <span class="card-menu__price">23€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
+                </article>
+              </div>
               <button class="add-cart">Commander</button>
             </div>
           
